kubernetes/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"city-permitting-ui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"city-permitting-ui\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: city-permitting-ui
    app.kubernetes.io/component: city-permitting-ui
    app.kubernetes.io/instance: city-permitting-ui
  name: city-permitting-ui
  namespace: city-permitting-agent-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: city-permitting-ui
  strategy: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deployment: city-permitting-ui
    spec:
      containers:
        - image: city-permitting-ui:latest
          name: city-permitting-ui
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
