kubernetes/app/base/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-city-permitting-agent-ui
  namespace: llama-serve
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: city-permitting-agent-ui
  policyTypes:
    - Ingress
